# ufc_fight_analyzer

./: .gitignore  README.md  pyproject.toml
ufc_fight_analyzer/: analyze_fight.py
ufc_fight_analyzer/configs/: botsort.yaml  bytetrack.yaml  default.yaml
ufc_fight_analyzer/detectors/: yolov8_detector.py
